--- a/Replacer/MainWindow.xaml
+++ b/Replacer/MainWindow.xaml
@@ -7,6 +7,9 @@
             <Button Click="OpenFiles">
                 Open
             </Button>
+            <Button Click="Flush"> 
+                Flush
+            </Button>
         </ToolBar>
         <StackPanel x:Name="ItemsList">
             
